# Kody

./: .gitignore  06Kwadratowa_T13_p3.xls  11_PMT_FV_Lokata_cwicz.ods  CPP.txt  Mazur_alg2.py  Python.txt  SORT_POZYCYJNY.ods  Schemat blokowy dodawania .odg  T13_p4_czy_pierwsza.ods  baza.db  baza.py  baza_Mazur.odb  bazagus.sql  dec2bin.cpp  dom.py  fibonacci.py  fibonacci2.py  gierka.py  horner.py  klasa_uczen.py  kolejka.cpp  konwersje.py  lista.cpp  notebook.zim  pracadomowa_MMazur.ods  silnia.cpp  stos.cpp  zlozonosc.cpp
BARTEK/: main.cpp
Cechy_algorytmu/: Systemy_numeracyjne.txt  Własności.txt
Notatki_ogólne/: ODC.txt  Różne.txt  SZYFROWANIE.txt  Systemy_numeracyjne.txt  Własności.txt  dec2bin.py  kompresja.txt  konwersje.py  system16.ods
bazasql/: baza.py  bazagus.db  bazagus.sql  kwerendy.py  kwerendy_orm.py  nazwiska.txt  uczniowie.db  uczniowie_orm.py  uczniowie_orm_Mazur.py
bazy/: 03_kwerendy.odb  baza_danych_Mazur.odb  baza_danych_szkola_gnatowski_bartosz_kl3ag2.odb  dane_statystyczne_GUS.xlsx  ludnosc.odb  przewodnik.odb
car/: car.cpp  car.h  makefile  samochod.cpp
cpp/: BEZ.cpp  Horner.cpp  Mazur_alg1.cpp  Mazur_alg22.cpp  Nieparzyste.cpp  algorytm1.cpp  bez.cpp  fibonacci.cpp  fibonacci_rek.cpp  fibonacci_rekur.cpp  funkcje.cpp  funkcje2.cpp  funkcje3.cpp  hello  hello.cpp  kalkulator.cpp  kolo  kolo.cpp  kwadrat  kwadrat.cpp  najwieksza.cpp  najwiekszaABC.cpp  petla.cpp  petla_while.cpp  petle_cw1_kl2ag2_Laskowska.cpp  petle_cw1_kl2ag2_Mazur.cpp  petle_cw1_kl2ag2_Mazuur.cpp  petle_cw2_kl2ag2_Mazur.cpp  petle_cw3_kl2ag2_Mazur.cpp  petle_cw4_kl2g2_Mazur.cpp  petle_cw5_kl2ag2_Mazur.cpp  petle_cw6_kl2ag2_Mazur.cpp  petle_switch.cpp  petle_znak.cpp  pierwiastek  praca_domowa2.cpp  praca_domowa3.cpp  praca_domowa4.cpp  praca_domowa5.cpp  silnia.cpp  (+7 more)
flask_chat/: app.py  baza.py  forms.py  modele.py  (+1 more)
netsim-grupa-3/: CMakeLists.txt  main.cpp
netsim-grupa-3/include/: config.hpp  factory.hpp  helpers.hpp  nodes.hpp  package.hpp  storage_types.hpp  types.hpp
netsim-grupa-3/src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  storage_types.cpp
netsim-grupa-3/test/: main_gtest.cpp  test_nodes.cpp  test_package.cpp
(+212 files in other folders)
